# mochi

./: .gitignore  Cargo.toml  README.md  TODO
examples/: advanced_features.moc  euler001.moc  euler002.moc  euler003.moc  euler004.moc  euler005.moc  euler006.moc  euler007.moc  euler008.moc  euler009.moc  euler010.moc  euler012.moc  fizzbuzz.moc  function.moc  generics.moc  guess.moc  hello.moc  interfaces.moc  loops_and_branching.moc  mine.moc  numbers_1.moc  numbers_2.moc  user_defined_types.moc  variable.moc
src/: error.rs  main.rs
src/ast/: arg.rs  member.rs  mod.rs  parser.rs
src/ast/expr/: accessor.rs  annotated_call.rs  as.rs  block.rs  cast.rs  expr_typ.rs  ident.rs  if.rs  literal.rs  match.rs  never.rs  operator.rs  return.rs  size_of.rs  syscall.rs  tuple.rs  unary.rs  unpack.rs  var.rs  while.rs
src/ast/stmt/: enum.rs  function.rs  impl.rs  interface.rs  pre_decl.rs  record.rs  stmt_typ.rs  stub.rs  var.rs
src/backend/: mod.rs  x86_64_fasm.rs
src/compiler/: mod.rs  test_tools.rs
src/lex/: scanner.rs  token.rs
src/tests/examples/: advanced_features.try_com  fizzbuzz.try_com  function.try_com  generics.try_com  hello.try_com  interfaces.try_com  loops_and_branching.try_com  numbers_1.try_com  (+4 more)
src/types/: function.rs  signature.rs  type.rs  type_id.rs
std/: alloc.moc  arr.moc  assert.moc  file.moc  prelude.moc  print.moc  result.moc  str.moc  string.moc  vec.moc
std/builtin/: char.moc  prelude.moc  ptr.moc  u8.moc
std/fmt/: prelude.moc  write.moc
std/ops/: bit_not.moc  mul.moc  prelude.moc  sub.moc
std/sys/: prelude.moc  x86_64.moc
(+303 files in other folders)
