[package]
name = "mochi-lang"
description = "A Rusty concatenative programming language"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/lebakasable/mochi"
edition = "2021"

[[bin]]
name = "mochi"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "3.1", features = ["derive"] }
